Added Sandbox-Level Log Aggregation and Viewing Support (#18)
* feat: add sandbox logs

* feat: add watch option in sbxctl logs

* chore: applied suggestion
